2009-10-09 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-iactions-list.c (do_insert_into_first):
	Fix multi-childs insertion.
	Remove useless do_insert_into_second() function.

	* src/nact-main.c (main):
	Only display traces from runtime library when in maintainer mode.

	* src/nact/nact-main-menubar.c (nact_main_menubar_runtime_init):
	Display a Maintainer menu when in maintainer mode.

	* src/nact/nact-tree-model.c (nact_tree_model_insert):
	Add debug traces.

	* src/nact/nautilus-actions-config-tool.actions:
	Define a placeholder for the Maintainer menu.

	* src/nact/nautilus-actions-maintainer.actions: New file.

	* src/nact/Makefile.am: Updated accordingly.

2009-10-08 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-api.h (na_object_remove_item):
	Moved to runtime library.

	* src/common/na-object-item-fn.h:
	* src/common/na-object-item.c (na_object_item_remove_item):
	Moved to runtime library.

	* src/nact/nact-iactions-list.c (do_insert_items):
	Marks the item itself as modified if it has no parent.

	* src/nact/nact-main-menubar.c (on_update_sensitivities):
	Enable Paste a profile if an action is selected.
	Always disable Paste into a profile.

	* src/nact/nact-main-window.c (actually_delete_item):
	Delete childs before removing from pivot.
	(nact_tree_model_insert, nact_tree_model_insert_into):
	Set parent on newly inserted child.

	* src/nact/nact-tree-model.c (fill_tree_store):
	Rewrite duplication code to get reference counts equal to 1 in the store.
	Install parent pointer in childs.

	* src/runtime/na-object-api.h (na_object_remove_item):
	Moved from common library.

	* src/runtime/na-object-id.c (instance_dispose):
	Remove itself from parent if any.

	* src/runtime/na-object-item-fn.h:
	* src/runtime/na-object-item.c (na_object_item_remove_item):
	Moved from common library.

	* src/runtime/na-object.c:
	Remove useless debug traces.

	Items loaded from an IO provider but not recorded in the hierarchical