@@ -29,7 +29,7 @@
             <menuitem action="ImportItem" />
             <menuitem action="ExportItem" />
         </menu>
-        <placeholder name="MaintainerMenu" />
+        <placeholder name="MaintainerMenuPlace" />
         <menu action="HelpMenu">
             <menuitem action="HelpItem" />
             <separator />
